@@ -1,4 +1,9 @@
 
+[*] Thu Aug 28 2003 - netcat (cvs)
+
+  o Fixed bug in UDP connection code, using pktinfo support. [BUG #796765]
+
+
 [*] Thu Aug 21 2003 - netcat v0.7.0
 
   o Added command line switch `-c' (close), which shuts down the connection
